added static files

--- a/development.ini
+++ b/development.ini
@@ -2,6 +2,22 @@
 use = egg:springboard_gem
 unicore.content_repos = unicore-cms-content-gem-in-prod
 
+featured_languages =
+    eng_GB
+    swa_KE
+    spa_ES
+
+available_languages =
+    eng_GB
+    swa_KE
+    spa_ES
+    hin_IN
+    mar_IN
+    tel_IN
+    tam_IN
+    ben_BD
+    asm_IN
+
 [celery]
 celery_task_serializer = json
 celery_always_eager = True
