fix up dev config for new springboard

--- a/development.ini
+++ b/development.ini
@@ -1,6 +1,6 @@
 [app:main]
 use = egg:springboard_gem
-unicore.content_repos = unicore-cms-content-gem-in-prod
+unicore.content_repo_urls = unicore-cms-content-gem-in-prod
 
 featured_languages =
     eng_GB
